--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
   font: 1.6rem 'Poppins', sans-serif;
   line-height: 1.4;
   color: white;
-  background: #7D6B91;
+  background: #444654;
   text-align: center;
 }
 
@@ -42,6 +42,7 @@ a:hover {
   width: 15%;
   border-radius: 50%;
   margin-block: 15px;
+  position: relative;
 }
 
 #profile-pic:hover {
@@ -65,7 +66,7 @@ a:hover {
 .btn {
   display:block;
   color:black;
-  background:white;
+  background:beige;
   padding:30px;
   margin:16px;
   border-radius:5px;
@@ -113,3 +114,16 @@ a:hover {
   cursor: pointer;
 }
 /*End adding profile-pic modal to the base program*/
+
+/*Start Adding cover picture*/
+
+#cover-pic {
+  /* background-image: url(""); */
+  color: black;
+  /* background-repeat: no-repeat; */
+  background-color: whitesmoke;
+  position: absolute;
+  width: 100%;
+  min-height: clamp(7.5vh,8.5vw,9vw);
+}
+/*End Adding cover picture*/
