--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
 /* Start vCard base program */
 p {
-  padding: 15px;
+  padding: 1.5rem;
   text-align:justify;
 }
 
@@ -51,11 +51,11 @@ a:hover {
 
 
 .profile-pic-caption {
-  margin-bottom: 15px;
+  margin-bottom: 1.5rem;
 }
 
 .icons a {
-  margin:10px;
+  margin:1rem;
   color:white;
 }
 
@@ -67,10 +67,10 @@ a:hover {
   display:block;
   color:black;
   background:beige;
-  padding:30px;
-  margin:16px;
-  border-radius:5px;
-  box-shadow: 5px 5px lightblue;
+  padding:3rem;
+  margin:1.6rem;
+  border-radius:.5rem;
+  box-shadow: .5rem .5rem lightblue;
 }
 
 .btn:hover {
@@ -97,15 +97,15 @@ a:hover {
 #prof-pic-modal img {
   display: flex;
   margin: auto;
-  box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.3);
-  border-radius: 4px;
+  box-shadow: .2rem .2rem .4rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: .4rem;
 }
 
 #prof-pic-modal-close-btn {
   color: #ccc;
-  font-size: 40px;
-  order:2;
-  margin-right: 15px;
+  font-size: 4rem;
+  order: 2;
+  margin-right: 1.5rem;
  
 }
 
