--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 
-:root{
+:root {
   font-size: 62.5%;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  font: 1.6rem 'Poppins', sans-serif;
+body {
+  font: 1.6rem "Poppins", sans-serif;
   line-height: 1.4;
   color: white;
   background: #444654;
@@ -21,21 +21,21 @@ body{
 /* Start vCard base program */
 p {
   padding: 1.5rem;
-  text-align:justify;
+  text-align: justify;
 }
 
-.icons>p{
-  text-align:center;
+.icons > p {
+  text-align: center;
 }
 
 a {
   text-decoration: none;
-  color: #87C1FF;
+  color: #87c1ff;
 }
 
 a:hover {
-    text-decoration: underline;
-    font-weight: 600;
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 #profile-pic {
@@ -49,35 +49,34 @@ a:hover {
   cursor: pointer;
 }
 
-
 .profile-pic-caption {
   margin-bottom: 1.5rem;
 }
 
 .icons a {
-  margin:1rem;
-  color:white;
+  margin: 1rem;
+  color: white;
 }
 
 .icons a:hover {
-  color: #87C1FF;
+  color: #87c1ff;
 }
 
 .btn {
-  display:block;
-  color:black;
-  background:beige;
-  padding:3rem;
-  margin:1.6rem;
-  border-radius:.5rem;
-  box-shadow: .5rem .5rem lightblue;
+  display: block;
+  color: black;
+  background: beige;
+  padding: 3rem;
+  margin: 1.6rem;
+  border-radius: 0.5rem;
+  box-shadow: 0.5rem 0.5rem lightblue;
 }
 
 .btn:hover {
-    background: lightskyblue;
-    font-weight: 800;
-    text-decoration: none;
-    transition: 0.2s;
+  background: lightskyblue;
+  font-weight: 800;
+  text-decoration: none;
+  transition: 0.2s;
 }
 /* End vCard base program */
 
@@ -86,9 +85,9 @@ a:hover {
   display: none;
   position: fixed;
   z-index: 1;
-  left:0;
-  top:0;
-  width:100%;
+  left: 0;
+  top: 0;
+  width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   transition: 0.5s;
@@ -97,8 +96,8 @@ a:hover {
 #prof-pic-modal img {
   display: flex;
   margin: auto;
-  box-shadow: .2rem .2rem .4rem 4rem rgba(0, 0, 0, 0.3);
-  border-radius: .4rem;
+  box-shadow: 0.2rem 0.2rem 0.4rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.4rem;
 }
 
 #prof-pic-modal-close-btn {
@@ -106,10 +105,10 @@ a:hover {
   font-size: 4rem;
   order: 2;
   margin-right: 1.5rem;
- 
 }
 
-#prof-pic-modal-close-btn:hover,#prof-pic-modal-close-btn:focus{
+#prof-pic-modal-close-btn:hover,
+#prof-pic-modal-close-btn:focus {
   color: #000;
   cursor: pointer;
 }
@@ -124,6 +123,6 @@ a:hover {
   background-color: whitesmoke;
   position: absolute;
   width: 100%;
-  min-height: clamp(7.5vh,8.5vw,9vw);
+  min-height: clamp(7.5vh, 8.5vw, 9vw);
 }
 /*End Adding cover picture*/
