--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ p {
   text-align: justify;
 }
 
-.icons > p {
+.visit-acc-text {
   text-align: center;
   margin-block: 15px;
+  padding-bottom: 0;
 }
 
 a {
@@ -57,6 +58,8 @@ a:hover {
 }
 
 .icons {
+  display: flex;
+  justify-content: center;
   padding-bottom: 1rem;
 }
 
@@ -66,7 +69,9 @@ a:hover {
 }
 
 .icons a:hover {
-  color: #87c1ff;
+  font-weight: 600;
+  position: relative;
+  top: -1rem;
 }
 
 .btn {
@@ -131,3 +136,35 @@ a:hover {
   min-height: clamp(7.5vh, 8.5vw, 9vw);
 }
 /*End Adding cover picture*/
+
+/* Tooltip */
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip-text {
+  position: absolute;
+  font-size: 12px;
+  font-weight: 500;
+  color: #f1f3f4;
+  background-color: #202124;
+  padding: 5px 8px;
+  border-radius: 5px;
+  letter-spacing: 1px;
+  top: 100%;
+  left: -5px;
+  visibility: hidden;
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
+
+#code-wars {
+  left: -17px;
+}
+
+#code-pen {
+  left: -10px;
+}
